<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".revaluation.RevaluationFragment">

  <data>

    <import type="android.view.View" />

    <import type="androidx.core.content.ContextCompat" />

    <variable
      name="revaluationViewModel"
      type="com.carkzis.android.plutus.revaluation.RevaluationViewModel" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:id="@+id/reval_title_linear_layout"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:orientation="vertical"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:ignore="UseCompoundDrawables">

      <ImageView
        android:id="@+id/icon_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/plutus_icon"
        android:cropToPadding="false"
        android:scaleType="center"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:ignore="VectorDrawableCompat"
        tools:layout_editor_absoluteX="152dp" />

      <TextView
        android:id="@+id/reval_calc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/revaluation_calculator"
        android:textAlignment="center"
        android:textSize="34sp"
        tools:layout_editor_absoluteX="68dp"
        tools:layout_editor_absoluteY="147dp" />

    </LinearLayout>

    <LinearLayout
      android:id="@+id/reval_input_linear_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal"
      app:layout_constraintTop_toBottomOf="@+id/reval_title_linear_layout"
      tools:layout_editor_absoluteX="70dp">

      <LinearLayout
        android:id="@+id/reval_input_ll_column_1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="219dp">

        <TextView
          android:id="@+id/reval_start_label"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:text="@string/start_date_label"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="33dp"
          tools:layout_editor_absoluteY="183dp" />

        <TextView
          android:id="@+id/reval_end_label"
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:gravity="center_vertical"
          android:text="@string/end_date"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="48dp"
          tools:layout_editor_absoluteY="424dp" />

      </LinearLayout>

      <LinearLayout
        android:id="@+id/reval_input_ll_column_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="219dp">

        <EditText
          android:id="@+id/reval_start_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:cursorVisible="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:hint="@string/start_date_hint"
          android:importantForAutofill="no"
          android:inputType="date"
          android:minHeight="48dp"
          android:text="@{String.valueOf(revaluationViewModel.startDateInfo)}"
          android:textSize="@dimen/normal_text_size"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          tools:layout_editor_absoluteY="214dp" />


        <EditText
          android:id="@+id/reval_end_edittext"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:clickable="false"
          android:cursorVisible="false"
          android:focusable="false"
          android:focusableInTouchMode="false"
          android:hint="@string/end_date_hint"
          android:importantForAutofill="no"
          android:inputType="date"
          android:minHeight="48dp"
          android:text="@{String.valueOf(revaluationViewModel.endDateInfo)}"
          android:textSize="@dimen/normal_text_size"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintHorizontal_bias="0.7"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent" />

      </LinearLayout>

    </LinearLayout>

    <Button
      android:id="@+id/calculate_reval_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:text="@string/calculate_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/reval_input_linear_layout" />

    <TableLayout
      android:id="@+id/reval_table"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:padding="12dp"
      android:stretchColumns="*"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/calculate_reval_button"
      app:layout_constraintVertical_bias="0.25">

      <TableRow
        android:id="@+id/cpi_high_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
          android:id="@+id/cpi_high_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cpi_revaluation_max_5"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp" />

        <TextView
          android:id="@+id/cpi_high_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{String.valueOf(revaluationViewModel.revalCalcResults.cpiHigh)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp"
          tools:text="1.234" />

      </TableRow>

      <TableRow
        android:id="@+id/cpi_low_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/cpi_low_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/cpi_revaluation_max_2_5"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp" />

        <TextView
          android:id="@+id/cpi_low_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{String.valueOf(revaluationViewModel.revalCalcResults.cpiLow)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp"
          tools:text="1.210" />

      </TableRow>

      <TableRow
        android:id="@+id/rpi_high_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/rpi_high_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rpi_revaluation_max_5"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp" />

        <TextView
          android:id="@+id/rpi_high_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{String.valueOf(revaluationViewModel.revalCalcResults.rpiHigh)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp"
          tools:text="1.432" />

      </TableRow>

      <TableRow
        android:id="@+id/rpi_low_row"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/rpi_low_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rpi_revaluation_max_2_5"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp" />

        <TextView
          android:id="@+id/rpi_low_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{String.valueOf(revaluationViewModel.revalCalcResults.rpiLow)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp"
          tools:text="1.321" />

      </TableRow>

      <TableRow
        android:id="@+id/gmp_fixed_tax_years"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/gmpf_tax_years_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/gmp_revaluation_complete_tax_years"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp" />

        <TextView
          android:id="@+id/gmpf_tax_years_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{String.valueOf(revaluationViewModel.revalCalcResults.gmpTaxYears)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp"
          tools:text="1.501" />

      </TableRow>

      <TableRow
        android:id="@+id/gmp_fixed_sixth_aprils"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
          android:id="@+id/gmpf_sixth_aprils_label"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/gmp_revaluation_sixth_aprils"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp" />

        <TextView
          android:id="@+id/gmpf_sixth_aprils_text"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{String.valueOf(revaluationViewModel.revalCalcResults.gmpSixthAprils)}"
          android:textSize="@dimen/normal_text_size"
          tools:layout_editor_absoluteX="57dp"
          tools:layout_editor_absoluteY="383dp"
          tools:text="1.606" />

      </TableRow>

    </TableLayout>

    <ProgressBar
      android:id="@+id/reval_progress_bar"
      style="?android:attr/progressBarStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      app:layout_constraintStart_toEndOf="@+id/calculate_reval_button"
      app:layout_constraintTop_toBottomOf="@+id/reval_input_linear_layout"
      app:loadingStatus="@{revaluationViewModel.loadingStatus}" />

  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>