...
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/date_calculator"
      app:cornerRadius="0dp"
      app:layout_constraintBottom_toTopOf="@+id/revaluation_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/pcls_button" />

    <Button
      android:id="@+id/revaluation_button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/revaluation_calculator"
      app:cornerRadius="0dp"
      app:layout_constraintBottom_toTopOf="@+id/inflation_button"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/date_button" />

    <Button
...
