...
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

<!--  app:rpiListData="@{rpiInflationViewModel.inflationRates}"-->

  <ProgressBar
    android:id="@+id/rpi_progress_bar"
    style="?android:attr/progressBarStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:loadingStatus="@{rpiInflationViewModel.loadingStatus}" />

  <TextView
    android:id="@+id/rpi_error"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/rpi_error"
    android:textSize="16sp"
    android:visibility="gone"
...
