...
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/cpi_items_button"
      app:layout_constraintVertical_chainStyle="packed" />

    <Button
      android:id="@+id/rpi_button"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:insetTop="0dp"
      android:insetBottom="0dp"
      android:text="@string/rpi_12_month_percentages"
      app:cornerRadius="0dp"
...
